# termrender

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  design.json  pyproject.toml  requirements.json
src/termrender/: CLAUDE.md  __init__.py  __main__.py  blocks.py  emit.py  layout.py  parser.py  style.py
src/termrender/renderers/: CLAUDE.md  __init__.py  borders.py  code.py  columns.py  divider.py  mermaid.py  panel.py  quote.py  table.py  text.py  timeline.py  tree.py
tests/: test_column_alignment.py  test_linebreak.py  test_mermaid_compat.py  test_tasklist.py  test_variable_colons.py
