[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termrender"
version = "0.1.0"
description = "Rich terminal rendering of directive-flavored markdown"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Silas Rhyneer" },
]
keywords = ["terminal", "markdown", "ansi", "cli", "rendering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Terminals",
]
dependencies = [
    "mistune>=3.0",
    "mermaid-ascii>=1.0",
    "pygments>=2.0",
]

[project.urls]
Homepage = "https://github.com/CaptainCrouton89/termrender"
Repository = "https://github.com/CaptainCrouton89/termrender"
Issues = "https://github.com/CaptainCrouton89/termrender/issues"

[project.scripts]
termrender = "termrender.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/termrender"]
